--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -154,7 +154,6 @@
 
 .choose-us-container {
   margin-top: 13rem;
-  padding-inline: 2.5rem;
 }
 .choose-us-container h1 {
   text-transform: uppercase;
@@ -292,7 +291,6 @@
   display: none;
   transform: 1s;
   flex-direction: column;
-
   gap: 2rem;
   padding-block: 2rem;
 }
@@ -301,7 +299,6 @@
   gap: 2rem;
   align-items: center;
   border-bottom: 1px solid white;
-  min-width: 90vw;
 }
 
 .top-prices .header-coin .left-side {
@@ -309,10 +306,11 @@
 }
 .top-prices .header-coin .right-side {
   width: 70%;
+  border: 1px solid red;
 }
 
 .top-prices .header-coin img {
-  width: 100%;
+  width: 70%;
   height: 100%;
 }
 
@@ -334,7 +332,7 @@
     flex-direction: column;
   }
   .choosebox-container {
-    min-width: 80vw;
+    min-width: 100vw;
     align-items: center;
   }
   .choose-content-container .mid-section img {
