--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ button {
   cursor: pointer;
 }
 ::-webkit-scrollbar {
-  width: auto;
+  width: 7px;
 }
 ::-webkit-scrollbar-thumb {
   background: linear-gradient(25deg, #130749, #ff00ea);
