--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -3,7 +3,7 @@
   padding-top: 10rem;
   padding-bottom: 2rem;
   padding-inline: 2.5rem;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .top-section .title {
